@startuml
'https://plantuml.com/class-diagram

hide methods
left to right direction
skinparam classAttributeIconSize 0

class Containers {
-x
-y
-z
-containerNumber
-checkDigit
-isoCode
-payLoad
-tare
-gross
-weight
}

class CargoManifest {
-listOfContainers
-ratio
-date
-mmsiCode
-id
-numberOfContainers
-destination
}

class Ship {
-mmsiCode
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-draft
-name
-vesselTypeId
-length
-width
-capacity
}

class ShipLocation {
-baseDateTime
-latitude
-longitude
-sog
-cog
-heading
-position
-transceiver
}

Containers "1..*"--"1..*" CargoManifest: related to

Ship "1"---"1..*" Containers : transport >
Ship "1" -- "1..*" ShipLocation : has >

@enduml